--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
     <main class="main">
         <img src="logo.png" alt="">
         
-        <h1>
+        <h2>
             <a>Data Science</a> <a>Anywhere</a>  <br> is now <br>
-            <a href="https://larn.in">LARN.in</a> 
+        </h2>
+        <h1>
+            <a href="https://larn.in">Larn Academy</a> 
         </h1>
     </main>
     <script>
-        setInterval(larn,5000);
+        setInterval(larn,10000);
 
         function larn (){
             window.location.href = "https://larn.in/"
