--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
             <a>Data Science</a> <a>Anywhere</a>  <br> is now <br>
         </h2>
         <h1>
-            <a href="https://larn.in">Larn Academy</a> 
+            <a href="https://convolution.in">Convolution Academy</a> 
         </h1>
     </main>
     <script>
         setInterval(larn,10000);
 
         function larn (){
-            window.location.href = "https://larn.in/"
+            window.location.href = "https://convolution.in/"
         }
     </script>
 </body>
